added connection to DB and changed classes

--- a/WebContent/start.html
+++ b/WebContent/start.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Hello</title>
 </head>
 <body>
-dfdfdfds
+<h2>hello from server</h2>
 </body>
 </html>
